syntax = "proto3";

package jnoj.sandbox.v1;

import "google/api/annotations.proto";

option go_package = "api/sandbox/v1;v1";

service SandboxService {
    rpc Run (RunRequest) returns (RunResponse) {
    };
}

message RunRequest {
}

message RunResponse {
}